Aggiunto classificatore Multilayer Perceptron con numero di nodi nell'Hidden layer fissato a 200.

--- a/master/build.gradle
+++ b/master/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation name: 'tools'
     implementation project(':sushi-lib')
     implementation project(':jbse')
+	implementation group: 'nz.ac.waikato.cms.weka', name: 'weka-stable', version: '3.8.0'
 }
 
 shadowJar {
